# tauri

core/tauri/: CHANGELOG.md  Cargo.toml
core/tauri-build/: CHANGELOG.md  Cargo.toml
core/tauri-codegen/: CHANGELOG.md  Cargo.toml
core/tauri-codegen/src/: blake3.rs  embedded_assets.rs  lib.rs
core/tauri-macros/: CHANGELOG.md  Cargo.toml
core/tauri-runtime/: CHANGELOG.md  Cargo.toml
core/tauri-runtime-wry/: CHANGELOG.md  Cargo.toml
examples/api/src-tauri/: Cargo.toml  tauri.conf.json
tooling/bundler/: Cargo.toml
tooling/cli/: CHANGELOG.md  Cargo.toml
tooling/cli/node/: CHANGELOG.md  package.json
