workspace = { }

[package]
name = "tauri-bundler"
version = "1.0.0"
authors = [
  "George Burton <burtonageo@gmail.com>",
  "Tauri Programme within The Commons Conservancy"
]
categories = [ "command-line-utilities", "development-tools::cargo-plugins" ]
license = "Apache-2.0 OR MIT"
keywords = [ "bundle", "cargo", "tauri" ]
repository = "https://github.com/tauri-apps/tauri"
description = "Wrap rust executables in OS-specific app bundles for Tauri"
edition = "2021"
rust-version = "1.57"
exclude = [
  ".license_template",
  "CHANGELOG.md",
  "/target",
  "rustfmt.toml"
]

[dependencies]
tauri-utils = { version = "1.0.0", path = "../../core/tauri-utils", features = [ "resources" ] }
image = "0.25.1"
libflate = "1.4.0"
anyhow = "1.0.82"
thiserror = "1.0.59"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = [ "derive" ] }
strsim = "0.11.1"
tar = "0.4.40"
toml = "0.8.12"
walkdir = "2.5.0"
handlebars = "4.5.0"
tempfile = "3.10.1"
log = { version = "0.4.21", features = [ "kv_unstable" ] }
dirs-next = "2.0"

[target."cfg(target_os = \"windows\")".dependencies]
attohttpc = "0.28.0"
uuid = { version = "1.8.0", features = [ "v4", "v5" ] }
bitness = "0.4"
winreg = "0.52.0"
sha2 = "0.10.8"
hex = "0.4.3"
glob = "0.3.1"
zip = "0.6.6"

[target."cfg(target_os = \"macos\")".dependencies]
icns = "0.3.1"
time = { version = "0.3.36", features = [ "formatting" ] }

[target."cfg(any(target_os = \"macos\", target_os = \"windows\"))".dependencies]
regex = "1.10.4"

[target."cfg(target_os = \"linux\")".dependencies]
heck = "0.5.0"
ar = "0.9.0"
md5 = "0.7.0"

[lib]
name = "tauri_bundler"
path = "src/lib.rs"
